; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_codec2.c_codec2_probe.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_codec2.c_codec2_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64* }

@AVPRIV_CODEC2_MAGIC = common dso_local global i64 0, align 8
@EXPECTED_CODEC2_MAJOR_VERSION = common dso_local global i64 0, align 8
@EXPECTED_CODEC2_MINOR_VERSION = common dso_local global i64 0, align 8
@AVPROBE_SCORE_EXTENSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @codec2_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @codec2_probe(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i64*, i64** %5, align 8
  %7 = call i64 @AV_RB24(i64* %6)
  %8 = load i64, i64* @AVPRIV_CODEC2_MAGIC, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %31

11:                                               ; preds = %1
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64*, i64** %13, align 8
  %15 = getelementptr inbounds i64, i64* %14, i64 3
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @EXPECTED_CODEC2_MAJOR_VERSION, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %27, label %19

19:                                               ; preds = %11
  %20 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i64*, i64** %21, align 8
  %23 = getelementptr inbounds i64, i64* %22, i64 4
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @EXPECTED_CODEC2_MINOR_VERSION, align 8
  %26 = icmp slt i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %19, %11
  store i32 0, i32* %2, align 4
  br label %31

28:                                               ; preds = %19
  %29 = load i32, i32* @AVPROBE_SCORE_EXTENSION, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %2, align 4
  br label %31

31:                                               ; preds = %28, %27, %10
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i64 @AV_RB24(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
